k8s/apps/monitoring/alertmanager/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-ha
spec:
  hostnames:
    - alertmanager.cbannister.xyz
  parentRefs:
    - name: internal-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: alertmanager-ha
          port: 9093
